[project]
name = "embedder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.8.5",
    "huggingface-hub>=1.12.0",
    "hydra-core>=1.3.2",
    "timm>=1.0.26",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "wandb>=0.26.1",
]
